# masterdelivery_boilerplate

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: alembic.ini  main.py
{{cookiecutter.project_slug}}/app/api/: __init__.py
{{cookiecutter.project_slug}}/app/api/v1/: __init__.py  check.py
{{cookiecutter.project_slug}}/app/core/: __init__.py  events.py  logging.py
{{cookiecutter.project_slug}}/app/core/base/: model.py  repository.py
{{cookiecutter.project_slug}}/app/core/connections/: db.py  kafka.py  redis.py
{{cookiecutter.project_slug}}/app/core/dependencies/: __init__.py  repository.py
{{cookiecutter.project_slug}}/app/core/errors/: validation_error.py
{{cookiecutter.project_slug}}/app/migrations/: env.py
{{cookiecutter.project_slug}}/dbdata/: postmaster.pid
{{cookiecutter.project_slug}}/dbdata/global/: 1260  1262  2671  pg_control  pg_internal.init
{{cookiecutter.project_slug}}/dbdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
{{cookiecutter.project_slug}}/dbdata/pg_xact/: 0000
{{cookiecutter.project_slug}}/helm/: values-md-dev-yc.yaml  values-md-personal-yc.yaml  values-md-production-aws.yaml  values-md-production-yc.yaml  values-md-qa-yc.yaml
{{cookiecutter.project_slug}}/scripts/: locales_compile.sh  locales_generate.sh  prestart.sh
(+61 files in other folders)
